syntax = "proto3";

package post;

option go_package = "github.com/zahartd/social-network/src/gen/go/post";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service PostService {
  rpc CreatePost (CreatePostRequest) returns (PostResponse);
  rpc GetPost (GetPostRequest) returns (PostResponse);
  rpc UpdatePost (UpdatePostRequest) returns (PostResponse);
  rpc DeletePost (DeletePostRequest) returns (google.protobuf.Empty);
  rpc ListMyPosts (ListMyPostsRequest) returns (ListPostsResponse);
  rpc ListPublicPosts (ListPublicPostsRequest) returns (ListPostsResponse);

  rpc ViewPost (ViewPostRequest) returns (google.protobuf.Empty);
  rpc LikePost (LikePostRequest) returns (google.protobuf.Empty);
  rpc UnlikePost (UnlikePostRequest) returns (google.protobuf.Empty);

  rpc AddComment (AddCommentRequest) returns (CommentResponse);
  rpc AddReply (AddReplyRequest) returns (ReplyResponse);
  rpc ListComments (ListCommentsRequest)  returns (ListCommentsResponse);
  rpc ListReplies (ListRepliesRequest) returns (ListRepliesResponse);
}

message Post {
  string id = 1;
  string user_id = 2;
  string title = 3;
  string description = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  bool is_private = 7;
  repeated string tags = 8;
}

message CreatePostRequest {
  string title = 1;
  string description = 2;
  bool is_private = 3;
  repeated string tags = 4;
}

message PostResponse {
  Post post = 1;
}

message GetPostRequest {
  string post_id = 1;
}

message UpdatePostRequest {
  string post_id = 1;
  string title = 2;
  string description = 3;
  bool is_private = 4;
  repeated string tags = 5;
}

message DeletePostRequest {
  string post_id = 1;
}

message ListMyPostsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListPublicPostsRequest {
  int32 page = 1;
  int32 page_size = 2;
  optional string user_id = 3;
}

message ListPostsResponse {
  repeated Post posts = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message ViewPostRequest { 
  string post_id = 1;
}

message LikePostRequest { 
  string post_id = 1;
}

message UnlikePostRequest { 
  string post_id = 1;
}

message AddCommentRequest {
  string post_id = 1;
  string text = 2;
}

message Comment {
  string id = 1;
  string post_id = 2;
  string user_id = 3;
  string text = 4;
  google.protobuf.Timestamp created_at = 5;
}

message CommentResponse  {
  Comment comment = 1;
}

message ListCommentsRequest {
  string post_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message AddReplyRequest {
  string post_id = 1;
  string parent_comment_id = 2;
  string text = 3;
}

message Reply {
  string id = 1;
  string post_id = 2;
  string parent_comment_id = 3;
  string user_id = 4;
  string text = 5;
  google.protobuf.Timestamp created_at = 6;
}

message ReplyResponse  {
  Reply reply = 1;
}

message ListRepliesRequest {
  string parent_comment_id = 1;
}

message ListCommentsResponse {
  repeated Comment comments = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message ListRepliesResponse {
  repeated Reply replies = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
}